fixing z-index issues

--- a/website/scss/all.scss
+++ b/website/scss/all.scss
@@ -72,8 +72,7 @@ $background-color: #dfdfdf;
 	}
 
 //Z-indecies
-$nav-index:100;
-$banner-index:100;
+$nav-index:10;
 
 
 @import 'layout';
